tests/baselines/reference/templateStringInDeleteExpressionES6.errors.txt
templateStringInDeleteExpressionES6.ts(1,8): error TS2703: The operand of a 'delete' operator must be a property reference.


==== templateStringInDeleteExpressionES6.ts (1 errors) ====
    delete `abc${0}abc`;
           ~~~~~~~~~~~~
!!! error TS2703: The operand of a 'delete' operator must be a property reference.